test/fail/error_coercion4.sest
module ErrorCoercion4 = struct
  module Sub :> sig
    val power : fun(int, int) -> int
  end = struct
    letrec aux(acc, n, x) =
      if n <= 0 then acc else
        aux(x * acc, n - 1, x)

    let power(n, x) =
      aux(1, n, x)
  end

  let main() =
    Sub.aux(1, 4, 3)

end
